<resources>
    <string name="app_name">CalculatorPro</string>
    <string name="c">C</string>
    <string name="open_bracket">(</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="slash">/</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="ac">AC</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="equalto">=</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="multiply">*</string>
    <string name="addition">+</string>
    <string name="close_bracket">)</string>
    <string name="input">0</string>
    <string name="input2">0</string>
    <string name="divide">÷</string>
</resources>