<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="395dp"
        android:layout_height="91dp"
        android:layout_above="@+id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="148dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:text="@string/input2"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttons_layout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#CECECF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="#FFD369"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="#A5C9CA"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/close_bracket"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="#A5C9CA"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#747C88"
                android:text="@string/slash"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textAlignment="center"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#747C88"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#747C88"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#747C88"
                android:text="@string/addition"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="#FFD369"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:backgroundTint="#EEEEEE"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:backgroundTint="#A5C9CA"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#222831"
                android:text="@string/equalto"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
